- Fix keybinding selection activation error. - Fix keyboard icon alignment problem while zoom in.

--- a/src/Components/CodePaneHeader/KeyBinding.module.css
+++ b/src/Components/CodePaneHeader/KeyBinding.module.css
@@ -2,22 +2,33 @@
     display: block;
     position: absolute;
     width: 5rem;
+    height: 100%;
     top: 0;
     left: 75%;
-    /*border: 1px solid white;*/
     z-index: 1500;
 }
 
 .kbIcon {
-    display: block;
-    position: relative;
-    text-align: center;
-    font-size: 1.5rem;
+    display: flex;
+    flex-flow: column;
+    height: 100%;
+    max-height: 1.5rem;
+    justify-content: center;
+    align-items: center;
 }
+
+.fakeyboard {
+    flex: 1 1 0;
+    padding: 0;
+    margin: 0;
+    font-size: 1.5rem;
+    vertical-align: middle;
+}
+
 .kbTextEditor {
     display: block;
     width: 5rem;
-    margin: 0.125rem;
+    margin: 0.125rem auto;
     font-family: inherit;
     font-size: 0.85rem;
     text-align: center;
